--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-future
        - Fixed ASF tag parsing regression (reported by cygn)

  v.3.6-Alpha2 2012-08-15
        - Fixed CLI database load to work regardless of whether it's run from
                the top-level directory (reported by porthose)
        - Fixed XML cleanup to work with newer versions of libpcre
                (patch by Natureshadow)
        - Fixed ID3v2 disk number parsing
        - Updated getID3 to 1.9.3
        - Added php-gettext for fallback emulation when a locale (or gettext)
                isn't supported
        - Fixed pluralisation issue in Recently Played
        - Added support for extracting MBIDs from M4A files
        - Fixed parsing of some tag types (most notably M4A)
        - Corrected PLS output to work with more players (reported by bhassel)
        - Fixed an issue with compound artists in media with MusicBrainz tags
                (reported by greengeek)
        - Fixed an issue with filename pattern matching when patterns contained
                characters that are part of regex syntax (such as -)
        - Fixed display of logic operator in rules (reported by Twister)
        - Fixed newsearch issue preventing use of more than 9 rules 
                (reported by Twister)
        - Fixed JSON escaping issue that broke search in some cases
                (reported by XeeNiX)
        - Overhauled CLI tools for installation and database management
        - Fixed admin form issue (reported by the3rdbit)
        - Improved efficiency of fetching song lists via the API
                (reported by lotan_rm)
        - Added admin_enable_required option to user registration